--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,6 +18,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" type="image/x-icon" href="icon.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,6 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>UCryptography</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
